--- a/PredictingStudentPerformance/PredictingStudentPerformance.Rmd
+++ b/PredictingStudentPerformance/PredictingStudentPerformance.Rmd
@@ -21,14 +21,14 @@ Accurately predict a student's performance (final grade) in math from various at
 The dataset includes the student's final math score (performance) and 30 different characteristics about the student and is freely available on the [UCI Machine Learning Repository](http://archive.ics.uci.edu/ml/datasets/Student+Performance).
 
 ```{r load + explore data, message=FALSE, warning=FALSE}
-data <- read.csv("~/Documents/Data Science/GitHub_repository/MachineLearningPortfolio/PredictingStudentPerformance/student_data/student-mat.csv", sep = ";", header = TRUE) # student math scores and characteristics
+studentdata <- read.csv("~/Documents/Data Science/GitHub_repository/MachineLearningPortfolio/PredictingStudentPerformance/student_data/student-mat.csv", sep = ";", header = TRUE) # student math scores and characteristics
 
-str(data) # 395 students with 33 variables, "G3.y" is the final grade and predictor target
+str(studentdata) # 395 students with 33 variables, "G3.y" is the final grade and predictor target
 
-data %>% 
+studentdata %>% 
   sapply(function(x) sum(is.na(x))) # no missing data
 
-data %>% 
+studentdata %>% 
   boxplot(use.cols = TRUE) # a few fairly skewed predictors and variable scales
 
 ```
@@ -38,9 +38,9 @@ data %>%
 After trying out various transformations (including centering, scaling, normalization, BoxCox, and YeoJohnson), I have decided to use standardization which helps to make the data more normal in distribution while still maintaining variation in the predictors.
 
 ```{r data transformation, message=FALSE, warning=FALSE}
-preprocessParams <- preProcess(data, method = c("center", "scale")) # calculate the pre-process parameters from the dataset by standardizing them
+preprocessParams <- preProcess(studentdata, method = c("center", "scale")) # calculate the pre-process parameters from the dataset by standardizing them
 print(preprocessParams) # summarize transform parameters
-transformed <- predict(preprocessParams, data) # transform the dataset using the parameters
+transformed <- predict(preprocessParams, studentdata) # transform the dataset using the parameters
 # summary(transformed) # summarize the transformed dataset
 boxplot(transformed, use.cols = TRUE)
 
@@ -64,11 +64,11 @@ transformed_pruned <- transformed_numeric %>%
   select(-c(highlyCorrelated)) 
 str(transformed_pruned) # 569 observations with 13 predictors
 
-data <- cbind(transformed_pruned$G3, transformed_pruned[, 1:13], transformed_factors) # do not want G1.y and G2.y (1st and 2nd period grades) since these are highly correlated with the final grade, but make the modeling less useful
+studentdata <- cbind(transformed_pruned$G3, transformed_pruned[, 1:13], transformed_factors) # do not want G1.y and G2.y (1st and 2nd period grades) since these are highly correlated with the final grade, but make the modeling less useful
  # We just want to predict final grades based off of student attributes and not previous grades
-names(data)[1] <- "FinalGrade"
+names(studentdata)[1] <- "FinalGrade"
 
-str(data)
+str(studentdata)
 ```
 
 ## Rank features by importance
@@ -79,7 +79,7 @@ Based off of importance ranking, the student's number of failures, their mother'
 seed <- 23
 set.seed(seed)
 control <- trainControl(method = "repeatedcv", number = 10, repeats = 3) # prepare training scheme
-model <- train(FinalGrade ~ ., data = data, method = "BstLm", preProcess = "scale", trControl = control) # train the model
+model <- train(FinalGrade ~ ., data = studentdata, method = "BstLm", preProcess = "scale", trControl = control) # train the model
 importance <- varImp(model, scale = FALSE) # estimate variable importance
 print(importance) # summarize importance
 plot(importance) # plot importance
@@ -92,116 +92,83 @@ Feature selection shows that all 30 predictors are needed to minimize the cross-
 ```{r feature selection, message=FALSE, warning=FALSE}
 set.seed(seed)
 control <- rfeControl(functions = rfFuncs, method = "cv", number = 10) # define the control using a random forest selection function
-results <- rfe(data[ , -1], data$FinalGrade, sizes = c(1:17), rfeControl = control) # run the RFE algorithm
+results <- rfe(studentdata[ , -1], studentdata$FinalGrade, sizes = c(1:17), rfeControl = control) # run the RFE algorithm
 print(results) # summarize the results
 predictors(results) # list the chosen features
 selected_predictors <- predictors(results)
 plot(results, type=c("g", "o")) # plot the results
 
-#data <- data %>% 
-#  select(FinalGrade, selected_predictors)
-#str(data)
+
 
 ```
 
 ## Spot-checking ML algorithms
 
-Models that appear useful for accurate prediction include gbm, glmnet, glm, svmRadial, rf and C5.0.
+Models that appear useful for accurate prediction (minimized root mean squared error) include gbm, rf, treebag, and rpart. In addition these useful models are all fairly correlated with eachother and thus model stacking will likely not improve prediction accuracy.
 
-{r spot checking algorithms, message=FALSE, warning=FALSE}
+```{r spot checking algorithms, message=FALSE, warning=FALSE}
 control <- trainControl(method = "repeatedcv", number = 10, repeats=3)
 set.seed(seed)
-metric <- "Accuracy" # define test metric to compare models
+metric <- "RMSE" # define test metric to compare models
 
-algorithms <- c("lda", "glm", "glmnet", "svmRadial", "knn", "nb", "rpart", "C5.0", "treebag", "rf", "gbm")
+algorithms <- c("glmboost", "gam", "glmnet", "svmRadial", "mlp", "knn", "rpart", "treebag", "rf", "gbm", "lasso") # regression algorithms
 
-garbage <- capture.output(models <- caretList(diagnosis ~ ., data = data, trControl = control, methodList = algorithms))
+garbage <- capture.output(models <- caretList(FinalGrade ~ ., data = studentdata, trControl = control, methodList = algorithms))
 results <- resamples(models)
 summary(results)
 dotplot(results)
 cormodels <- modelCor(results)
 print(cormodels)
 corrplot(cormodels)
-
+```
 
 ## Tune best ML algorithms
 
-With model tuning, we can slightly increase the prediction accuracies of the best machine learning algorithms. After tuning, the most accurate model is a gradient boosting machine (gbm) with 1,000 trees, a shrinkage parameter of 0.01, and a minimum of 15 observations in the terminal tree nodes, and the model allows for 2-way interactions between predictor variables. This model has an accuracy of 0.9696.  
+With model tuning, we can slightly increase the prediction accuracies of the best machine learning algorithms. After tuning, the most accurate model is a random forest where 14 randomly selected predictor variables are used at each split within the decision tree. This model has a root mean squared error (RMSE) of 0.843.  
 
-{r tuning best algorithms, message=FALSE, warning=FALSE}
-# glm
-modelLookup(model = "glm") # look up the tuning parameter of the model
-set.seed(seed)
-glm_gridsearch <- train(diagnosis ~ ., data = data, method = "glm", metric = metric, trControl = control)
-print(glm_gridsearch)
-
+```{r tuning best algorithms, message=FALSE, warning=FALSE}
 # gbm
-tunegrid <- expand.grid(n.trees = c(900, 1000, 1100), interaction.depth = c(1, 2), 
-                        shrinkage = c(0.01), n.minobsinnode = c(15, 20)) 
+modelLookup(model = "gbm")
+tunegrid <- expand.grid(n.trees = c(800, 900), interaction.depth = c(1, 2), 
+                        shrinkage = c(0.01), n.minobsinnode = c(3, 5)) 
 set.seed(seed)
-garbage <- capture.output(gbm_gridsearch <- train(diagnosis ~ ., data = data, method = "gbm", metric = metric,
-                                                  tuneGrid = tunegrid, trControl = control))
+
+garbage <- capture.output(gbm_gridsearch <- caret::train(FinalGrade ~ ., data = studentdata, method = "gbm", 
+                                                  metric = metric, tuneGrid = tunegrid, trControl = control))
 print(gbm_gridsearch)
-max(gbm_gridsearch$results$Accuracy)
+min(gbm_gridsearch$results$RMSE) # 0.8478651
 
-# glmnet
-tunegrid <- expand.grid(alpha = c(0.5, 0.75, 1), lambda = c(0.0001, 0.0002, 0.0003)) 
-set.seed(seed)
-glmnet_gridsearch <- train(diagnosis ~ ., data = data, method = "glmnet", metric = metric, tuneGrid = tunegrid,
-                       trControl = control)
-print(glmnet_gridsearch)
-max(glmnet_gridsearch$results$Accuracy)
 
-# svmRadial
-tunegrid <- expand.grid(sigma = c(0.14, 0.15, 0.16, 0.17, 0.18), C = c(0.75, 0.80, 0.90, 1)) 
+# treebag
+modelLookup(model = "treebag")
 set.seed(seed)
-svm_gridsearch <- train(diagnosis ~ ., data = data, method = "svmRadial", metric = metric, tuneGrid = tunegrid,
+treebag_mod <- caret::train(FinalGrade ~ ., data = studentdata, method = "treebag", metric = metric,
+                            trControl = control)
+treebag_gridsearch <- caret::train(FinalGrade ~ ., data = studentdata, method = "treebag", metric = metric, tunelength = 5,
                        trControl = control)
-svm_gridsearch <- train(diagnosis ~ ., data = data, method = "svmRadial", metric = metric, tunelength = 5,
-                       trControl = control)
-print(svm_gridsearch)
-max(svm_gridsearch$results$Accuracy)
+print(treebag_mod) # 0.8593949
+print(treebag_gridsearch) # 0.8442427
 
 # rf
-mtry <- sqrt(ncol(data[ , 2:9])) # default for rf tuning parameter is 2.828427
-tunegrid <- expand.grid(.mtry = c(1:8))
+modelLookup(model = "rf")
+mtry <- sqrt(ncol(studentdata[ , -1])) # default for rf tuning parameter is 5.477226
+tunegrid <- expand.grid(.mtry = c(1:15))
 set.seed(seed)
-rf_gridsearch <- train(diagnosis ~ ., data = data, method = "rf", metric = metric, tuneGrid = tunegrid,
+rf_gridsearch <- caret::train(FinalGrade ~ ., data = studentdata, method = "rf", metric = metric, tuneGrid = tunegrid,
                        trControl = control)
 print(rf_gridsearch)
-max(rf_gridsearch$results$Accuracy)
+min(rf_gridsearch$results$RMSE) # 0.8434868
 
-# C5.0
-tunegrid <- expand.grid(.trials = c(5:15), .model = "tree", .winnow = FALSE) 
+# rpart
+modelLookup(model = "rpart")
+tunegrid <- expand.grid(.cp = c(0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.15)) 
 set.seed(seed)
-C5.0_gridsearch <- train(diagnosis ~ ., data = data, method = "C5.0", metric = metric, tuneGrid = tunegrid,
+rpart_gridsearch <- caret::train(FinalGrade ~ ., data = studentdata, method = "rpart", metric = metric, tuneGrid = tunegrid,
                        trControl = control)
-print(C5.0_gridsearch)
-max(C5.0_gridsearch$results$Accuracy)
 
+print(rpart_gridsearch)
+min(rpart_gridsearch$results$RMSE) # 0.8702648
+```
 
-## Ensemble modeling
+To conclude, a random forest regression model with all 30 predictor variables (14 randomly selected at each split in the decision tree) is the best model at predicting a student's final test score (performance). While this tuned model surpasses other algorithm types (e.g., generalized linear models, support vector machines) and published studies using the same dataset (Cortez and Silva 2008, best RMSE was 1.75), much of the variation in student performance is still not explained (R squared is 0.296). Thus, likely other factors not explored in this dataset contribute to student performance (e.g., instructor information, socioeconomic variables, class size).
 
-Stacking the best machine learning models together with a random forest algorithm, slightly improves upon the accuracy of the best tuned gradient boosting machine (which had an accuracy of 0.9696). The accuracy of the stacked model is 0.977, and the model includes the generalized linear model (glm), radial support vector machine (svmRadial), the random forest model, C5.0, and the gradient boosting machine. I did not include the glmnet model since this was highly correlated (> 0.75) with the generalized linear model. 
-
-{r, message=FALSE, warning=FALSE}
-algorithmsList2 = c("glm", "svmRadial", "C5.0", "rf", "gbm")
-
-stackControl <- trainControl(method="repeatedcv", number=10, repeats=3, savePredictions=TRUE, classProbs=TRUE)
-set.seed(seed)
-garbage <- capture.output(models2 <- caretList(diagnosis ~ ., data = data, trControl = stackControl, methodList = algorithmsList2))
-
-
-set.seed(seed)
-stack.glm <- caretStack(models2, method = "glm", metric = "Accuracy", trControl=stackControl) # stack models with glm
-  # try out different kinds of models to stack to see which one is most accurate
-print(stack.glm) # 0.9726613
-
-set.seed(seed)
-stack.rf <- caretStack(models2, method = "rf", metric = "Accuracy", trControl=stackControl) # stack models with glm
-  # try out different kinds of models to stack to see which one is most accurate
-print(stack.rf) # 0.9769578
-
-
-
-To conclude, a stacked machine learning model with eight breast tumor characteristics is quite accurate (0.977) at determining whether the tumor is benign or malignant. This statistical approach could be applied to help improve breast cancer diagnoses and detection.
